[package]
name = "rust-calc"
version = "0.1.0"
authors = ["AlanSwenson <alan@alanswenson.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.8.1"
gdk = "0.12.1"
gio = "0.8.1"
atk = "0.8.0"
gtk-sys = "0.9.2"
glib = "0.9.3"